k8s/overlays/prod-lite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volunteerhub
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
